# Pip_manager

./: .gitignore  README.md  build.bat  pip_manager.spec  pyproject.toml
pip_manager/: README.md  build.bat
pip_manager/src/: __init__.py
pip_manager/src/core/: __init__.py  pip_wrapper.py  pypi.py
pip_manager/src/ui/: app.py
src/: main.py
src/core/: pip_wrapper.py  pypi.py
src/ui/: app.py
tests/: test_pip_wrapper.py
